--- a/School.API/School.API.csproj
+++ b/School.API/School.API.csproj
@@ -90,6 +90,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\11ClassController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
