--- a/School.Web/School.Web.csproj
+++ b/School.Web/School.Web.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\js\common.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.TextManager.Interop.9.0" Version="17.14.40260" />
   </ItemGroup>
 
